--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Cyprus</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a.panayiotou@cyens.org.cy</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Research Links:</strong> <span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Links:</strong> <span>
                     <a href="https://orcid.org/0000-0002-7614-1059" class="linkedin" target="_blank">ORCID</a>,
                     <a href="https://www.researchgate.net/profile/Andreas-Panayiotou-7" class="linkedin" target="_blank">ResearchGate</a>
                   </span></li>
@@ -129,7 +129,7 @@
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (B.Sc) | Computer Science</h4>
-              <h5>Jan 2017 - Jun 2021</h5>
+              <h5>Jan 2017 - Jan 2021</h5>
               <p><em>University of Cyprus, Nicosia, Cyprus</em></p>
               <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
               <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
@@ -139,7 +139,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Research Associate</h4>
-              <h5>September 2021 - Present</h5>
+              <h5>Sep 2021 - Present</h5>
               <p><em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus </em></p>
               <ul>
                 <li>Computer Graphics</li>
@@ -149,7 +149,7 @@
             </div>
             <div class="resume-item">
               <h4>Summer Intern</h4>
-              <h5>June 2021 - July 2021</h5>
+              <h5>Jun 2021 - Jul 2021</h5>
               <p><em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus </em></p>
               <ul>
                 <li>Unity | ML-Agents Toolkit</li>
@@ -159,7 +159,7 @@
             </div>
             <div class="resume-item">
               <h4>Information Technology Trainee</h4>
-              <h5>June 2018 - July 2018</h5>
+              <h5>Jun 2018 - Jul 2018</h5>
               <p><em>Bernhard Schulte Shipmanagement, Limassol, Cyprus </em></p>
               <ul>
                 <li>Support company core network</li>
