--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
-              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank">CCP: Configurable Crowd Profiles</a></h5>
+              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank" style="margin-left: 10px;"><img src="assets/img/siggraphLogo.jpg" width=80px alt=""></a></a></h5>
+              
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings), August 7–11, 2022, Vancouver, BC, Canada. ACM, New York, NY, USA</p>
               <div class="pub-icons">
