--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Biography</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Short Bio</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -76,7 +76,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Biography</h2>
+          <h2>Short Bio</h2>
         </div>
 
         <div class="row">
@@ -85,8 +85,8 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="fst-italic" style="text-align: justify;">
-              Hello. I am Andreas and I was born in Limassol, a beautiful seaside city in Cyprus. I am currently a research associate at CYENS - Center of Excellence
-              and a part of V-EUPNEA: Living, Breathing Virtual World group. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
+              Hello. I am Andreas and I was born in Limassol, a beautiful seaside city in Cyprus. I am currently a research associate at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
+              and a part of <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
               I have a B.Sc in Computer Science from the same university.
               My interests include, but not limited to, Crowd Simulation, Machine Learning, Computer Animation and Computer Games Technologies.
             </p>
