--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.facebook.com/AndreasPanayiotou97/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>  
-        <a href="Discord_Account:AndreasPan#5300" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>       
+        <a href="https://join.skype.com/invite/dBJFaNxFg5j5 class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
+        <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
+        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>       
       </div>
     </div>
   </section><!-- End Hero -->
@@ -80,14 +81,14 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
               Hello. I am Andreas and I was born in Limassol, a beautiful seaside city in Cyprus. I am currently a research associate at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
               and a part of <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
-              I have a B.Sc in Computer Science from the same university.
+              have a B.Sc in Computer Science from the same university.
               My interests include, but not limited to, Crowd Simulation, Machine Learning, Computer Animation and Computer Games Technologies.
             </p>
             <div class="row">
@@ -115,23 +116,33 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <p>Full Resume available <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Here</a>.</p>
+        <p><b>Full Resume available <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Here</a>.</b></p>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Science (M.Sc) | Computer Science</h4>
+              <h4>Master of Science (M.Sc) Computer Science</h4>
               <h5>Jan 2021 - Jun 2022</h5>
-              <p><em>University of Cyprus, Nicosia, Cyprus</em></p>
-              <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
+              <p>
+                <em>University of Cyprus, Nicosia, Cyprus</em>
+                <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
+                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                </a>
+              </p>
+              <p style="text-align: justify;">Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
               <p>Thesis: Crowd simulation by Deep Reinforcement Learning</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Science (B.Sc) | Computer Science</h4>
+              <h4>Bachelor of Science (B.Sc) Computer Science</h4>
               <h5>Jan 2017 - Jan 2021</h5>
-              <p><em>University of Cyprus, Nicosia, Cyprus</em></p>
-              <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
+              <p>
+                <em>University of Cyprus, Nicosia, Cyprus</em>
+                <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
+                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                </a>
+              </p>
+              <p style="text-align: justify;"s>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
               <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
             </div>
           </div>
@@ -140,7 +151,12 @@
             <div class="resume-item">
               <h4>Research Associate</h4>
               <h5>Sep 2021 - Present</h5>
-              <p><em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus </em></p>
+              <p>
+                <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
+                <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
+                  <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                </a>
+              </p>
               <ul>
                 <li>Computer Graphics</li>
                 <li>Crowd Simulation</li>
@@ -150,7 +166,12 @@
             <div class="resume-item">
               <h4>Summer Intern</h4>
               <h5>Jun 2021 - Jul 2021</h5>
-              <p><em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus </em></p>
+              <p>
+                <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
+                <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
+                  <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                </a>
+              </p>
               <ul>
                 <li>Unity | ML-Agents Toolkit</li>
                 <li>Training of agents using Imitation and Reinforcement Learning</li>
@@ -160,7 +181,12 @@
             <div class="resume-item">
               <h4>Information Technology Trainee</h4>
               <h5>Jun 2018 - Jul 2018</h5>
-              <p><em>Bernhard Schulte Shipmanagement, Limassol, Cyprus </em></p>
+              <p>
+                <em>Bernhard Schulte Shipmanagement, Limassol, Cyprus</em>
+                <a href="https://www.bs-shipmanagement.com/" target="_blank">
+                  <img src="assets/img/bsm.jpg" width="30px" style="margin-left: 5px;" class="img-fluid" alt="">
+                </a>
+              </p>
               <ul>
                 <li>Support company core network</li>
                 <li>Provide technical support to employees</li>
@@ -255,8 +281,9 @@
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.facebook.com/AndreasPanayiotou97/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>  
-        <a href="Discord_Account:AndreasPan#5300" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>  
+        <a href="https://join.skype.com/invite/dBJFaNxFg5j5 class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
+        <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
+        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>    
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
