--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+    <div class="container" data-aos="zoom-in" data-aos-delay="50">
       <h1>Andreas Panayiotou</h1>
       <p>I'm <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p>
       <div class="social-links">
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.facebook.com/AndreasPanayiotou97/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-        <a href="https://join.skype.com/invite/dBJFaNxFg5j5 class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
+        <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
         <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
         <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>       
       </div>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-3 col-sm-4">
+          <div class="col-lg-3 col-sm-4 mb-4 mb-md-0">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-9 col-sm-8 content">
@@ -116,7 +116,7 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <p><b>Full Resume available <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Here</a>.</b></p>
+        <p>Full Resume available <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Here</a>.</p>
 
         <div class="row">
           <div class="col-lg-6">
@@ -130,7 +130,7 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
               </p>
-              <p style="text-align: justify;">Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
+              <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
               <p>Thesis: Crowd simulation by Deep Reinforcement Learning</p>
             </div>
             <div class="resume-item">
@@ -142,7 +142,7 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
               </p>
-              <p style="text-align: justify;"s>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
+              <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
               <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
             </div>
           </div>
@@ -184,7 +184,7 @@
               <p>
                 <em>Bernhard Schulte Shipmanagement, Limassol, Cyprus</em>
                 <a href="https://www.bs-shipmanagement.com/" target="_blank">
-                  <img src="assets/img/bsm.jpg" width="30px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/bsm.jpg" width="35px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
               </p>
               <ul>
@@ -208,7 +208,7 @@
         </div>
 
         <div class="row">
-          <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank" style="margin-left: 10px;"><img src="assets/img/siggraphLogo.jpg" width=80px alt=""></a></a></h5>
               
@@ -281,7 +281,7 @@
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.facebook.com/AndreasPanayiotou97/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-        <a href="https://join.skype.com/invite/dBJFaNxFg5j5 class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
+        <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
         <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
         <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>    
       </div>
