--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <h4>Master of Science (M.Sc) Computer Science</h4>
               <h5>Jan 2021 - Jun 2022</h5>
               <p>
-                <em>University of Cyprus, Nicosia, Cyprus</em>
+                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -137,7 +137,7 @@
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
               <h5>Jan 2017 - Jan 2021</h5>
               <p>
-                <em>University of Cyprus, Nicosia, Cyprus</em>
+                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
