--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
               Hello. I am Andreas and I was born in Limassol, a beautiful seaside city in Cyprus. I am currently a research associate at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
-              and a part of <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
+              and a part of <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group. In 2022, I received my M.Sc in <b>Computer Science</b> from <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a>, while also
               have a B.Sc in Computer Science from the same university.
               My interests include, but not limited to, Crowd Simulation, Machine Learning, Computer Animation and Computer Games Technologies.
             </p>
@@ -125,7 +125,7 @@
               <h4>Master of Science (M.Sc) Computer Science</h4>
               <h5>Jan 2021 - Jun 2022</h5>
               <p>
-                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
+                <em><b>University of Cyprus (UCY), Nicosia, Cyprus</b></em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -137,7 +137,7 @@
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
               <h5>Jan 2017 - Jan 2021</h5>
               <p>
-                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
+                <em><b>University of Cyprus (UCY), Nicosia, Cyprus</b></em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -152,7 +152,7 @@
               <h4>Research Associate</h4>
               <h5>Sep 2021 - Present</h5>
               <p>
-                <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
+                <em><b>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</b></em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
                   <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -167,7 +167,7 @@
               <h4>Summer Intern</h4>
               <h5>Jun 2021 - Jul 2021</h5>
               <p>
-                <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
+                <em><b>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</b></em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
                   <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -182,7 +182,7 @@
               <h4>Information Technology Trainee</h4>
               <h5>Jun 2018 - Jul 2018</h5>
               <p>
-                <em>Bernhard Schulte Shipmanagement, Limassol, Cyprus</em>
+                <em><b>Bernhard Schulte Shipmanagement, Limassol, Cyprus</b></em>
                 <a href="https://www.bs-shipmanagement.com/" target="_blank">
                   <img src="assets/img/bsm.jpg" width="35px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
