--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <h4>Master of Science (M.Sc) Computer Science</h4>
               <h5>Jan 2021 - Jun 2022</h5>
               <p>
-                <em><b>University of Cyprus (UCY), Nicosia, Cyprus</b></em>
+                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -137,7 +137,7 @@
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
               <h5>Jan 2017 - Jan 2021</h5>
               <p>
-                <em><b>University of Cyprus (UCY), Nicosia, Cyprus</b></em>
+                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -152,7 +152,7 @@
               <h4>Research Associate</h4>
               <h5>Sep 2021 - Present</h5>
               <p>
-                <em><b>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</b></em>
+                <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
                   <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -167,7 +167,7 @@
               <h4>Summer Intern</h4>
               <h5>Jun 2021 - Jul 2021</h5>
               <p>
-                <em><b>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</b></em>
+                <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
                   <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
@@ -182,7 +182,7 @@
               <h4>Information Technology Trainee</h4>
               <h5>Jun 2018 - Jul 2018</h5>
               <p>
-                <em><b>Bernhard Schulte Shipmanagement, Limassol, Cyprus</b></em>
+                <em>Bernhard Schulte Shipmanagement, Limassol, Cyprus</em>
                 <a href="https://www.bs-shipmanagement.com/" target="_blank">
                   <img src="assets/img/bsm.jpg" width="35px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
