--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/light-style.css" rel="stylesheet" id="theme-link">
 
   <!-- =======================================================
   * Template Name: MyResume - v4.7.0
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -45,6 +44,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
+        <li><a id="darkToggleBtn" href="#" class="dark-toggle"><i class="bx bx-moon"></i> <span id="darkToggleText">Dark Mode</span></a></li>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Short Bio</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
@@ -154,7 +154,7 @@
               <p>
                 <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
-                  <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="">
                 </a>
               </p>
               <ul>
@@ -169,7 +169,7 @@
               <p>
                 <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
-                  <img src="assets/img/cyens.jpg" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="">
                 </a>
               </p>
               <ul>
@@ -184,7 +184,7 @@
               <p>
                 <em>Bernhard Schulte Shipmanagement, Limassol, Cyprus</em>
                 <a href="https://www.bs-shipmanagement.com/" target="_blank">
-                  <img src="assets/img/bsm.jpg" width="35px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/bsm.png" width="35px" style="margin-left: 5px;" class="img-fluid" alt="">
                 </a>
               </p>
               <ul>
@@ -212,7 +212,7 @@
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
-              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.jpg" width=80px alt=""></a></a></h5>
+              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt=""></a></a></h5>
               
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings), August 7–11, 2022, Vancouver, BC, Canada. ACM, New York, NY, USA</i></p>
