--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a id="darkToggleBtn" href="#" class="dark-toggle"><i class="bx bx-moon"></i> <span id="darkToggleText">Dark Mode</span></a></li>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Short Bio</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
@@ -318,6 +317,7 @@
 
 
   <div id="preloader"></div>
+  <a id="darkToggleBtn" href="#" class="dark-toggle d-flex align-items-center justify-content-center"><i class="bx bx-moon"></i></a>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
