--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-sm-4 mb-4 mb-md-0">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="Andreas Panayiotou Profile Picture">
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
@@ -209,7 +209,7 @@
           2022
         </div>
         <div class="row">
-          <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="50">
+          <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt=""></a></a></h5>
               
