--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="assets/css/dark-style.css" id="theme-link">
+  <link rel="stylesheet" href="assets/css/light-style.css" id="css_light">
+  <link rel="stylesheet" href="assets/css/dark-style.css" id="css_dark" disabled>
 
   <!-- =======================================================
   * Template Name: MyResume - v4.7.0
