--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+
+  <link rel="stylesheet" href="assets/css/light-style.css" id="css_light">
+  <link rel="stylesheet" href="assets/css/dark-style.css" id="css_dark">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,9 +26,6 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <link rel="stylesheet" href="assets/css/light-style.css" id="css_light">
-  <link rel="stylesheet" href="assets/css/dark-style.css" id="css_dark" disabled>
 
   <!-- =======================================================
   * Template Name: MyResume - v4.7.0
