--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <p>Full Resume available <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Here</a>.</p>
+        <p>Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Available Here</a>.</p>
 
         <div class="row">
           <div class="col-lg-6">
@@ -130,7 +130,7 @@
                 </a>
               </p>
               <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
-              <p>Thesis: Crowd simulation by Deep Reinforcement Learning</p>
+              <p>Thesis: Crowd simulation by Deep Reinforcement Learning - <a href="http://gnosis.library.ucy.ac.cy/handle/7/65267" target="_blank">Available Here</a></p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
