--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-sm-4 mb-4 mb-md-0">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="Andreas Panayiotou Profile Picture">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" style="border-radius: 50%;" alt="Andreas Panayiotou Profile Picture">
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
