--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-sm-4 mb-4 mb-md-0">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" style="border-radius: 50%;" alt="Andreas Panayiotou Profile Picture">
+            <img src="assets/img/profile-img.jpg" style="border-radius: 50%;" class="img-fluid" alt="Andreas Panayiotou Profile Picture">
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
@@ -115,7 +115,7 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <p>Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf" download>Available Here</a></p>
+        <p>Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf">Available Here</a>.</p>
 
         <div class="row">
           <div class="col-lg-6">
@@ -130,7 +130,7 @@
                 </a>
               </p>
               <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
-              <p>Thesis: Crowd simulation by Deep Reinforcement Learning - <a href="http://gnosis.library.ucy.ac.cy/handle/7/65267" target="_blank">Available Here</a></p>
+              <p>Thesis: Crowd simulation by Deep Reinforcement Learning - <a href="assets/files/Andreas_Panayiotou_Master_Thesis.pdf" target="_blank">Available Here</a></p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
@@ -214,7 +214,7 @@
               <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt=""></a></a></h5>
               
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
-              <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings)</i></p>
+              <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings), August 7–11, 2022, Vancouver, BC, Canada. ACM, New York, NY, USA</i></p>
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-12" style="margin-bottom: 5px;">
                   <img class="img-fluid paperImg" src="assets/img/ccp.jpg" alt="CCP: Configurable Crowd Profiles" onclick="enlargeImage(this.src, this.alt);">
@@ -222,9 +222,8 @@
                 <div class="col-lg-10 col-md-9 col-12">
                   <div class="pub-icons">
                     <a href="https://doi.org/10.1145/3528233.3530712" target="_blank"><i class="bx bx-file" style="font-size: 30px;"></i></a>
-                    <a href="https://github.com/veupnea/CCP" target="_blank"><i class="bx bx-code-alt" style="font-size: 30px;"></i></a>
                     <a href="https://www.youtube.com/watch?v=k5SAOnisBas" target="_blank"><i class="bx bx-camera-movie" style="font-size: 30px;"></i></a>
-                    <a href="https://www.youtube.com/watch?v=VkHZQYRP0w4" target="_blank"><i class="bx bx-fast-forward-circle" style="font-size: 30px;"></i></a>
+                    <a href="https://github.com/veupnea/CCP" target="_blank"><i class="bx bx-code-alt" style="font-size: 30px;"></i></a>
                   </div>
                   <div class="text-container">
                     <div class="content hideContent">
