--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
       <div class="social-links">
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.facebook.com/AndreasPanayiotou97/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
         <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
         <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
         <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>       
@@ -98,6 +97,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a.panayiotou@cyens.org.cy</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Links:</strong> <span>
                     <a href="https://orcid.org/0000-0002-7614-1059" class="linkedin" target="_blank">ORCID</a>,
+                    <a href="https://scholar.google.com/citations?user=sWQRnKwAAAAJ&hl=el" class="linkedin" target="_blank">Google Scholar</a>,
                     <a href="https://www.researchgate.net/profile/Andreas-Panayiotou-7" class="linkedin" target="_blank">ResearchGate</a>
                   </span></li>
                 </ul>
@@ -287,7 +287,6 @@
       <div class="social-links">
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.facebook.com/AndreasPanayiotou97/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
         <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
         <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
         <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>    
